syntax = "proto3";

option csharp_namespace = "Presentation.Grpc";

import "google/api/annotations.proto";

package users;

service UsersService {
    rpc GetAllUsers (Empty) returns (UsersList) {
        option (google.api.http) = {
            get: "/users"
        };
    }
    rpc GetUserById (UserId) returns (User) {
      option (google.api.http) = {
        get: "/users/{Id}"
      };
    }
    rpc CreateUser (User) returns (User) {
      option (google.api.http) = {
        post: "/users"
        body: "*"
      };
    }
    // rpc FindOne (Search) returns (User) {}
    rpc UpdateUser (User) returns (User) {
      option (google.api.http) = {
        put: "/users"
        body: "*"
      };
    }
    rpc DeleteUser (UserId) returns (Empty) {
      option (google.api.http) = {
        delete: "/users/{Id}"
      };
    }
}

message Empty {}

message UserId  {
  string Id = 1;
}

message User {
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Email = 4;
  string Password = 5;
  string Token = 6;
}

message UsersList {
   repeated User users = 1;
}

message Search {
  string key = 1;
  string value = 2;
}
